# GoodClean

./: .gitignore  AGENT.md  MEMORY.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.trae/documents/: fix-all-bugs.md  fix-keyboard-handling.md  goodclean-terminal-cleaner.md  redesign-user-flow.md
goodclean/: __init__.py  __main__.py  analyzer.py  app.py  cache.py  cleaner.py  config.py  constants.py  duplicate_finder.py  exporter.py  file_type_identifier.py  models.py  scanner.py  suggestion.py
goodclean/screens/: __init__.py  main_screen.py  welcome_screen.py
goodclean/widgets/: confirm_dialog.py  directory_tree.py  file_info.py  search_bar.py  size_bar.py
tests/: conftest.py  test_analyzer.py  test_cache.py  test_cleaner.py  test_config.py  test_duplicate_finder.py  test_exporter.py  test_file_type_identifier.py  test_models.py  test_scanner.py  test_suggestion.py
