[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goodclean"
version = "1.0.0"
description = "终端磁盘清理工具 - 扫描、分析并清理占用空间的文件"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
    "rich>=13.0",
    "send2trash>=1.8",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.0",
]

[project.scripts]
goodclean = "goodclean.__main__:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"goodclean/exporter.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "goodclean.screens.*",
    "goodclean.widgets.*",
    "goodclean.app",
]
ignore_errors = true
